--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,123 @@
+aiohttp==3.8.3
+aiosignal==1.3.1
+anyio==3.6.2
 appdirs==1.4.4
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
 asttokens==2.2.1
+async-timeout==4.0.2
+attrs==22.2.0
 autopep8==2.0.1
 backcall==0.2.0
 beautifulsoup4==4.11.1
+bleach==5.0.1
 blessed==1.19.1
+bokeh==2.4.3
 bpython==0.23
+Brotli==1.0.9
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+cloudpickle==2.2.0
 comm==0.1.2
+contourpy==1.0.6
 cryptography==39.0.0
 curtsies==0.4.1
 cwcwidth==0.1.8
+cycler==0.11.0
+dash==2.7.1
+dash-bootstrap-components==1.3.0
+dash-colorscales==0.0.4
+dash-core-components==2.0.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dask==2022.12.1
+dataprep==0.4.5
 debugpy==1.6.5
 decorator==5.1.1
+defusedxml==0.7.1
+dtale==2.9.1
 entrypoints==0.4
-executing==1.2.0
+et-xmlfile==1.1.0
+executing==0.8.3
+fastjsonschema==2.16.2
+Flask==2.2.2
+Flask-Compress==1.13
+Flask-Cors==3.0.10
+flask-ngrok==0.0.25
+fonttools==4.38.0
+fqdn==1.5.1
 frozendict==2.3.4
+frozenlist==1.3.3
+fsspec==2022.11.0
+future==0.18.2
 greenlet==2.0.1
 html5lib==1.1
 idna==3.4
+importlib-resources==5.10.2
 ipykernel==6.19.4
 ipython==8.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.2
+isoduration==20.11.0
+itsdangerous==2.1.2
 jedi==0.18.2
+Jinja2==3.0.3
+joblib==1.2.0
+jsonpath-ng==1.5.3
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter-events==0.5.0
 jupyter_client==7.4.8
 jupyter_core==5.1.2
+jupyter_server==2.0.6
+jupyter_server_terminals==0.4.3
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+kaleido==0.2.1
+kiwisolver==1.4.4
+locket==1.0.0
 lxml==4.9.2
+lz4==4.3.2
+MarkupSafe==2.1.1
+matplotlib==3.6.2
 matplotlib-inline==0.1.6
+Metaphone==0.6
+missingno==0.4.2
+mistune==2.0.4
+multidict==6.0.4
+multimethod==1.9.1
 multitasking==0.0.11
 mypy==0.991
 mypy-extensions==0.4.3
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.7
+nbformat==5.7.1
 nest-asyncio==1.5.6
+networkx==3.0
+nltk==3.8.1
+notebook==6.5.2
+notebook_shim==0.2.2
 numpy==1.24.1
+openpyxl==3.0.10
 packaging==22.0
 pandas==1.5.2
 pandas-stubs==1.5.2.230105
+pandocfilters==1.5.0
 parso==0.8.3
+partd==1.3.0
+patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.4.0
 platformdirs==2.6.2
+plotly==5.11.0
+ply==3.11
+prometheus-client==0.15.0
 prompt-toolkit==3.0.36
 psutil==5.9.4
 ptyprocess==0.7.0
@@ -46,23 +125,59 @@ pure-eval==0.2.2
 pycodestyle==2.10.0
 pycparser==2.21
 pydantic==1.10.4
+pydot==1.4.2
 Pygments==2.14.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-crfsuite==0.9.8
 python-dateutil==2.8.2
+python-json-logger==2.0.4
+python-stdnum==1.18
 pytz==2022.7
 pyxdg==0.28
 PyYAML==6.0
 pyzmq==24.0.1
+rapidfuzz==2.13.7
+regex==2021.11.10
 requests==2.28.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+scikit-learn==1.2.0
+scipy==1.9.3
+seaborn==0.12.2
+Send2Trash==1.8.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.3.2.post1
-stack-data==0.6.2
+SQLAlchemy==1.3.24
+squarify==0.4.3
+stack-data==0.5.1
+statsmodels==0.13.5
+strsimpy==0.2.1
+sweetviz==2.1.4
+tenacity==8.1.0
+terminado==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
 tomli==2.0.1
+toolz==0.12.0
 tornado==6.2
+tqdm==4.64.1
 traitlets==5.8.0
 types-pytz==2022.7.0.0
 types-PyYAML==6.0.12.2
 typing_extensions==4.4.0
+uri-template==1.2.0
 urllib3==1.26.13
+varname==0.8.3
 wcwidth==0.2.5
+webcolors==1.12
 webencodings==0.5.1
+websocket-client==1.4.2
+Werkzeug==2.2.2
+widgetsnbextension==3.6.1
+wordcloud==1.8.2.2
+xarray==2022.12.0
+xlrd==2.0.1
+yarl==1.8.2
 yfinance==0.2.3
