--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,15 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 cloudpickle==2.2.0
+colorcet==3.0.1
 comm==0.1.2
 contourpy==1.0.6
+convertdate==2.4.0
 cryptography==39.0.0
 curtsies==0.4.1
 cwcwidth==0.1.8
 cycler==0.11.0
+Cython==0.29.33
 dash==2.7.1
 dash-bootstrap-components==1.3.0
 dash-colorscales==0.0.4
@@ -35,10 +38,10 @@ dash-daq==0.5.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 dask==2022.12.1
-dataprep==0.4.5
 debugpy==1.6.5
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.13
 dtale==2.9.1
 entrypoints==0.4
 et-xmlfile==1.1.0
@@ -55,8 +58,15 @@ frozenlist==1.3.3
 fsspec==2022.11.0
 future==0.18.2
 greenlet==2.0.1
+hijri-converter==2.2.4
+holidays==0.18
+holoviews==1.15.4
 html5lib==1.1
+htmlmin==0.1.12
+human-readable==1.3.1
+humanize==4.4.0
 idna==3.4
+ImageHash==4.3.1
 importlib-resources==5.10.2
 ipykernel==6.19.4
 ipython==8.8.0
@@ -79,11 +89,14 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
 kaleido==0.2.1
 kiwisolver==1.4.4
+korean-lunar-calendar==0.3.1
+llvmlite==0.39.1
 locket==1.0.0
 lxml==4.9.2
 lz4==4.3.2
+Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib==3.6.2
+matplotlib==3.6.3
 matplotlib-inline==0.1.6
 Metaphone==0.6
 missingno==0.4.2
@@ -102,38 +115,50 @@ networkx==3.0
 nltk==3.8.1
 notebook==6.5.2
 notebook_shim==0.2.2
-numpy==1.24.1
+numba==0.56.4
+numpy==1.23.5
 openpyxl==3.0.10
 packaging==22.0
 pandas==1.5.2
+pandas-profiling==3.6.2
 pandas-stubs==1.5.2.230105
 pandocfilters==1.5.0
+panel==0.14.2
+param==1.12.3
 parso==0.8.3
 partd==1.3.0
 patsy==0.5.3
 pexpect==4.8.0
+phik==0.12.3
 pickleshare==0.7.5
 Pillow==9.4.0
 platformdirs==2.6.2
 plotly==5.11.0
 ply==3.11
+pmdarima==2.0.2
 prometheus-client==0.15.0
 prompt-toolkit==3.0.36
+pscript==0.7.7
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.10.0
 pycparser==2.21
+pyct==0.4.8
 pydantic==1.10.4
 pydot==1.4.2
 Pygments==2.14.0
+PyMeeus==0.5.12
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-crfsuite==0.9.8
 python-dateutil==2.8.2
+python-fsutil==0.9.3
 python-json-logger==2.0.4
 python-stdnum==1.18
 pytz==2022.7
+pyviz-comms==2.2.1
+PyWavelets==1.4.1
 pyxdg==0.28
 PyYAML==6.0
 pyzmq==24.0.1
@@ -147,14 +172,17 @@ scipy==1.9.3
 seaborn==0.12.2
 Send2Trash==1.8.0
 six==1.16.0
+sktime==0.15.1
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.3.24
 squarify==0.4.3
 stack-data==0.5.1
+statsforecast==1.4.0
 statsmodels==0.13.5
 strsimpy==0.2.1
 sweetviz==2.1.4
+tangled-up-in-unicode==0.2.0
 tenacity==8.1.0
 terminado==0.17.1
 threadpoolctl==3.1.0
@@ -164,12 +192,14 @@ toolz==0.12.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.8.0
+typeguard==2.13.3
 types-pytz==2022.7.0.0
 types-PyYAML==6.0.12.2
 typing_extensions==4.4.0
 uri-template==1.2.0
 urllib3==1.26.13
 varname==0.8.3
+visions==0.7.5
 wcwidth==0.2.5
 webcolors==1.12
 webencodings==0.5.1
@@ -177,7 +207,9 @@ websocket-client==1.4.2
 Werkzeug==2.2.2
 widgetsnbextension==3.6.1
 wordcloud==1.8.2.2
+wrapt==1.14.1
 xarray==2022.12.0
 xlrd==2.0.1
+xyzservices==2022.9.0
 yarl==1.8.2
 yfinance==0.2.3
